--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.90.12",
     "date-fns": "^4.1.0",
     "expo": "~54.0.29",
+    "expo-blur": "~15.0.8",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
     "expo-device": "^8.0.10",
