--- a/src/package.json
+++ b/src/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.8",
     "@shopify/flash-list": "^2.0.2",
+    "@supabase/supabase-js": "^2.89.0",
     "@tamagui/config": "^1.139.3",
     "@tamagui/metro-plugin": "^1.139.3",
     "@tanstack/react-query": "^5.90.12",
@@ -32,6 +33,7 @@
     "expo-linking": "~8.0.10",
     "expo-notifications": "^0.32.15",
     "expo-router": "~6.0.19",
+    "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
@@ -40,19 +42,22 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.68.0",
     "react-native": "0.81.5",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-mmkv": "^4.1.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tamagui": "^1.139.3",
-    "zod": "^4.1.13",
+    "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.1.0",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
